--- a/androidApp/app/src/main/AndroidManifest.xml
+++ b/androidApp/app/src/main/AndroidManifest.xml
@@ -58,6 +58,11 @@
             android:label="@string/title_activity_patient_list"
             android:theme="@style/AppTheme.NoActionBar"></activity>
 
+ <activity
+            android:name=".AppointmentTab"
+            android:label="@string/title_activity_patient_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
 
     </application>
 
