--- a/androidApp/app/src/main/AndroidManifest.xml
+++ b/androidApp/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
 
  <activity
             android:name=".AppointmentTab"
-            android:label="@string/title_activity_patient_list"
+            android:label="Appointments"
             android:theme="@style/AppTheme.NoActionBar"></activity>
 
 
